// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`esbuild-plugin-node-worker > CJS works 1`] = `
""use strict";
const { Worker } = require("worker_threads");
new Worker(require("path").join(__dirname, "workers/worker-W3OA5ZW4.cjs"), {
  workerData: "foo"
});
"
`;

exports[`esbuild-plugin-node-worker > CJS works 2`] = `
""use strict";
const path = require("path");
const { Worker } = require("worker_threads");
class NestedWorker extends Worker {
  constructor(path2, options) {
    super(path2, options);
  }
}
const nestedWorker = new NestedWorker(require("path").join(__dirname, "workers/nested-worker-KDZIPHJV.cjs"), {
  workerData: "foo"
});
const nestedWorker2 = new Worker(require("path").join(__dirname, "workers/nested-worker-KDZIPHJV.cjs"), {
  workerData: "foo"
});
console.log("Worker says hi");
"
`;

exports[`esbuild-plugin-node-worker > CJS works 3`] = `
""use strict";
console.log("Nested worker says hi");
"
`;

exports[`esbuild-plugin-node-worker > ESM works 1`] = `
"import { Worker } from "node:worker_threads";
new Worker(new URL("workers/worker-VJ7KZKI3.mjs", import.meta.url), {
  workerData: "foo"
});
new Worker(new URL("workers/worker-KR7U4LDZ.mjs", import.meta.url), {
  workerData: "foo"
});
"
`;

exports[`esbuild-plugin-node-worker > ESM works 2`] = `
"import { Worker } from "node:worker_threads";
class NestedWorker extends Worker {
  constructor(path2, options) {
    super(path2, options);
  }
}
const nestedWorker = new NestedWorker(new URL("workers/nested-worker-DKYGNA4W.mjs", import.meta.url), {
  workerData: "foo"
});
const nestedWorker2 = new Worker(new URL("workers/nested-worker-DKYGNA4W.mjs", import.meta.url), {
  workerData: "foo"
});
console.log("Worker says hi");
"
`;

exports[`esbuild-plugin-node-worker > ESM works 3`] = `
"console.log("Sibling worker says hi");
"
`;

exports[`esbuild-plugin-node-worker > ESM works 4`] = `
"console.log("Nested worker says hi");
"
`;
